bugfix dialog event details for course events, clean tables if user was deleted in user management, wrong colour for category, refs #5393 refs #5248
git-svn-id: svn://develop.studip.de/studip/trunk@33507 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/less/calendar.less
+++ b/public/assets/stylesheets/less/calendar.less
@@ -361,11 +361,11 @@ table.calendar-week, table.calendar-day {
         }
         &.calendar-category14 {
             div:first-child {
-                background-color: #E0665B;
+                background-color: #18645C;
                 overflow: hidden;
             }
             background: linear-gradient(to right, #29AB9F, #5CC4B9) repeat-x #29AB9F;
-            border: solid 1px #E0665B;
+            border: solid 1px #18645C;
             .calendar-category-mixin;
         }
         &.calendar-category15 {
