--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -4226,6 +4226,18 @@ td.currenttoday {
   border: 2px solid #DD0000;
   background-image: url('../images/celltoday.png');
 }
+table.calendar-week,
+table.calendar-day {
+  table-layout: fixed;
+  width: 100%;
+  border: 1px solid #fff;
+  border-collapse: separate;
+  border-spacing: 0;
+}
+table.calendar-week td,
+table.calendar-day td {
+  padding: 0;
+}
 table.calendar-month {
   width: 100%;
 }
@@ -4274,6 +4286,7 @@ table.calendar-day {
 }
 .calendar-day-edit {
   text-align: right;
+  font-size: 0.8em;
 }
 .calendar-week tbody tr,
 .calendar-day tbody tr {
@@ -4488,7 +4501,7 @@ table.calendar-day tbody tr td.calendar-category13 div:first-child {
 table.calendar-week tbody tr td.calendar-category14,
 table.calendar-day tbody tr td.calendar-category14 {
   background: linear-gradient(to right, #29ab9f, #5cc4b9) repeat-x #29ab9f;
-  border: solid 1px #E0665B;
+  border: solid 1px #18645C;
   vertical-align: top;
   font-size: 11px;
   color: #fff;
@@ -4496,7 +4509,7 @@ table.calendar-day tbody tr td.calendar-category14 {
 }
 table.calendar-week tbody tr td.calendar-category14 div:first-child,
 table.calendar-day tbody tr td.calendar-category14 div:first-child {
-  background-color: #E0665B;
+  background-color: #18645C;
   overflow: hidden;
 }
 table.calendar-week tbody tr td.calendar-category15,
